--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,12 @@ table {
     font-weight: bold;
 }
 
+.calendar__actions-switch-date span {
+    font-weight: bold;
+    cursor: pointer;
+    margin: 0 1rem;
+}
+
 /*-------------------- Calendario --------------------*/
 .calendar {
     border: 1px solid #333333;
@@ -64,7 +70,7 @@ table {
 
 .calendar__date-dates {
     display: grid;
-    grid-template-columns: repeat(31, 1fr);
+    /* grid-template-columns: repeat(31, 1fr); */
 }
 
 .calendar__date-dates>span {
@@ -123,24 +129,3 @@ table {
 .clip-4 {
     clip-path: polygon(100% 0, 100% 100%, 0% 100%);
 }
-
-/* .booking-start, .booking-end {
-    height: 100%;
-    width: 50%;
-    position: relative;
-}
-
-.booking-start::before {
-    content: "";
-    position: absolute;
-    left: -100%;
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 19.5px 12.6px 19.5px 0;
-    border-color: transparent #ffffff transparent transparent;
-}
-
-.booking-start::after {
-    position: relative;
-} */
